[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bkshared = { path = "../crates/bkshared" }
sync = { path = "../crates/sync" }
bitmap = { path = "../crates/bitmap" }
kresult = { path = "../crates/kresult" }
bitflags = "1.3.2"

